tests/should_fail/ghost/non_pure.rs
extern crate creusot_contracts;
use creusot_contracts::*;

#[terminates]
fn terminating() {}

pub fn calls_terminating() {
    ghost! {
        terminating();
    };
}
