tests/should_fail/ghost/non_pure.stderr
error: called non-pure function `terminating` in ghost context
 --> non_pure.rs:9:9
  |
9 |         terminating();
  |         ^^^^^^^^^^^

error: aborting due to 1 previous error

